--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -507,7 +507,7 @@ $partSize: 5em;
 .current,.roll{
     filter: saturate(4);
 }
-.current_selected,.marchjet_selected,.roll_selected{
+.current_selected,.marchjet_selected,.roll_selected,.summonsWalk{
     filter:saturate(8);
 }
 .SneakyStaber_whileSneaking { margin-left: -105%!important; }//NOT ACTIVE NEEDS A IF STATEMENT THAT CHECK IF ITS ON HX WITH CHAMP OF SORTS
