--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1153,9 +1153,20 @@ div.unitModel:nth-child(3) > .bb_HUD > .bspeed.onBoard{top:0%;left:0%;background
 .fade_sms{
     @include apa_sms(forwards,8s);
 }
+#sms.showta{
+    pointer-events: all!important;
+    background: linear-gradient(180deg, 
+        rgba(255,255,255,0) 0%, 
+        rgba(255,255,246,0.468207351299895) 17%, 
+        rgba(255,254,220,0.4878151944371498) 100%);
+    box-shadow: .1vh .1vh 1vh black, 0 0 .5vh black;
+}
+#sms.hidta{
+    pointer-events: none!important;
+    background:none;
+    box-shadow: none;
+}
 #sms{
-    background-color:rgba(223, 183, 124, 0.39);
-    box-shadow: 0 0 1vh black inset, 0 0 .5vh black inset;
     overflow-y: hidden;
     position: absolute;
     width: 40vw;
@@ -1328,4 +1339,40 @@ div.unitModel:nth-child(3) > .bb_HUD > .bspeed.onBoard{top:0%;left:0%;background
 }
 #rallyAction:active, #claimAction:active{
     transform:scale(.95);
+}
+.sms_message{
+    padding-left:.4vw;
+}
+.endTask{
+    background-image:url('../img/minus.svg');
+    @include instaFlex();
+    // span{
+    //     font-family: $coinFont2;
+    //     font-size:61%;
+    //     z-index:4;
+    //     width:110%;
+    //     position:relative;
+    //     display:flex;
+    //     justify-content: center;
+    //     text-align:center;
+    // }
+}
+.myName{
+        font-family: $coinFont2;
+        font-size:80%;
+        z-index:4;
+        width:110%;
+        position:relative;
+        display:flex;
+        justify-content: center;
+        text-align:center;    
+        top:-283%;
+}
+.myName.black{
+    color:white;
+    text-shadow: 0 0 2px black;
+}
+.myName.white{
+    color:black;
+    text-shadow: 0 0 2px white, 0 0 1px white;
 }
