--- a/client/styles/__breakPoints.css
+++ b/client/styles/__breakPoints.css
@@ -1364,6 +1364,9 @@
   #app {
     padding-top: 5vh;
   }
+  .ripplingChoices.confirm {
+    font-size: 80%;
+  }
 }
 
 @media (max-aspect-ratio: 1000 / 781) and (min-aspect-ratio: 1000 / 1000) {
