--- a/client/styles/__breakPoints.scss
+++ b/client/styles/__breakPoints.scss
@@ -261,6 +261,9 @@
         }
         margin-left: -6%;
         margin-right: -6%;
+        .unitModel{
+            margin:auto -65% !important
+        }
         // transform: scale(1.18);
         // -ms-transform: scale(1.18); /* Internet Explorer */
         // -moz-transform: scale(1.18); /* Firefox */
@@ -386,6 +389,12 @@
     }
     .hexagon.endPhase{
         border-color:transparent rgba(134, 191, 196, 0.637) transparent rgba(149, 203, 207, 0.829);
+        &:hover{
+            background-image: url('../img/1Obj.svg');
+            .top,.bottom {
+                background-image: url('../img/1Obj.svg');
+            }
+        }
         .top {
             border-color: rgba(161, 209, 205, 0.898) rgba(131, 189, 190, 0.796) transparent transparent;
         }
