--- a/client/styles/_logInScreen.scss
+++ b/client/styles/_logInScreen.scss
@@ -594,3 +594,18 @@ $white: white;
 .legendary{
     box-shadow: inset 0  0 5vh goldenrod!important;
 }
+#agreement{
+    position: relative;
+    top: -95vh;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.transparent{
+    display:none!important;
+    pointer-events: none;
+}
+#TaT:hover{
+    cursor:pointer;
+}
