--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1480,3 +1480,52 @@ div.unitModel:nth-child(3) > .bb_HUD > .bspeed.onBoard{top:0%;left:0%;background
     @include instaFlex;
     text-shadow: 0 0 1vh rgb(27, 0, 0);
 }
+#rolledOutTT{
+    @include instaFlex;
+    flex-wrap:wrap;
+    //font-family: $coinFont1;
+    position:absolute;
+    z-index:24;
+    top:20vh;
+    left:20vw;
+    height:60vh;
+    width:60vw;
+    background: linear-gradient(180deg, 
+        rgba(255,255,255,0.5) 0%, 
+        rgba(255,255,246,0.85) 17%, 
+        rgba(255,254,220,0.99) 100%);
+    border:1px solid black;
+    box-shadow: 1px 1px 1px black;
+    text-shadow:0 0 1px white;
+    padding:1.5vw;
+    a{
+        display: contents;
+    }
+    #closeTT{
+        border: 1px solid #eeb74e;
+        border-radius: 15%;
+        display: inline-block;
+        width: 5vh;
+        height: 5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: radial-gradient(circle, 
+            rgba(255,255,255,0) 0%, 
+            rgba(250,222,143,0.468207351299895) 11%, 
+            rgba(230,155,16,0.767927239255077) 100%);
+        font-family: $coinFont2;
+        color: #521f64;
+        &:hover{
+            cursor:pointer;
+        }
+        &:active{
+            transform: scale(.9);
+        }
+    }
+    #contact_me{
+        color:rgb(1, 14, 1);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-shadow:1px 1px 1px black;
+    }
+}
